@@ -18,3 +18,5 @@ ltmain.sh
 m4
 missing
 stamp-h1
+test-driver
+test-suite.log
